Wed Jan 16 19:33:41 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkfilesel.c (gtk_file_selection_map): Refresh
	the dialog on map. (#52877, inspired by request from
	Murray Cumming)

Wed Jan 16 19:23:04 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkbindings.c (gtk_binding_entry_activate): 
	Support "optional" bindings. If a binding signal
	has a boolean return value, and returns FALSE it
	is as if it didn't exist all.

	* gtk/gtkbindings.c (binding_compose_params): Switch
	over to GValue.

	* gtk/gtknotebook.[ch]: Make the select_page() and
	change_current_page() signals only take effect when
	the focus is on the tab area so that key presses
	in children pass up to the toplevel correctly.

Wed Jan 16 12:16:37 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkoptionmenu.c (gtk_option_menu_size_request): Fix 
	calculation error in the (shouldn't happen) case where
	option_menu->height < child_requisition.height. (Patch
	from Jacob Berkman, #66969)

2002-01-15  Matthias Clasen  <matthiasc@poet.de>

	* gtk/gtkenums.h (GtkMatchType): Deprecate. (#68183)

	* gtk/gtkscale.h (gtk_scale_value_width): Remove useless 
 	compatibility macro. (#67730) 

Wed Jan 16 10:54:38 2002  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Fix typo in --help output.
	(Arnaud Charlet).

Wed Jan 16 10:18:42 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/stock-icons/Makefile.am (EXTRA_DIST): Add 
	gtkstockpixbufs.h.

	* configure.in: Make TIFF, JPEG, PNG loaders mandatory
	unless you configure with --without-libtiff, etc.
	(#54045, Brian Cameron)

2002-01-16  Padraig O'Briain <padraig.obriain@sun.com>

	* gtk/gtkmenushell.c (gtk_real_menu_shell_move_current):
	Avoid unexpected warning message when navigating menu (#68517)

2002-01-15  Jody Goldberg <jody@gnome.org>

	* gtk/gtklayout.c (gtk_layout_realize) : It is possible that a
	GtkLayout may have been scrolled _before_ it was realized.

Tue Jan 15 18:10:24 2002  Owen Taylor  <otaylor@redhat.com>
